--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Truman Virtual Tour - 3D Experience</title>
 
-  <!-- Tailwind -->
+  <!-- Tailwind CSS (Note: For production, use PostCSS plugin or Tailwind CLI) -->
   <script src="https://cdn.tailwindcss.com"></script>
 
   <!-- React -->
-  <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
-  <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
+  <script src="https://unpkg.com/react@18/umd/react.production.min.js" crossorigin></script>
+  <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js" crossorigin></script>
 
   <!-- Three.js -->
   <script src="https://unpkg.com/three@0.132.2/build/three.min.js"></script>
