Complete project reorganization and documentation
MAJOR RESTRUCTURE:
- Organized project into Frontend/Backend/Database/Public folders
- Moved all HTML, React, and frontend files to Frontend/
- Created Backend/ with Express.js server and dependencies
- Added Database/ with SQL schema and documentation
- Organized public assets into logo/icons/images subfolders

CODE REFACTORING:
- Updated all file paths in welcome.html and app.js
- Fixed image references to use new public/ structure
- Updated dev-server.py for new folder structure
- Enhanced package.json with new scripts and metadata

DOCUMENTATION:
- Created comprehensive README.md with full project info
- Added project timeline with date stamps
- Implemented update_readme.py for automated documentation
- Added installation, setup, and deployment instructions
- Included development guidelines and contributing info

TECHNICAL IMPROVEMENTS:
- Better separation of concerns
- Scalable folder structure
- Production-ready backend setup
- Database schema for future features
- Automated documentation system

--- a/Frontend/welcome.html
+++ b/Frontend/welcome.html
@@ -120,7 +120,7 @@
         .pixelated-loading {
             width: 32px;
             height: 32px;
-            background-image: url('images/icons.png');
+            background-image: url('../public/icons/icons.png');
             background-size: 128px 128px; /* Adjust based on actual sprite sheet size */
             background-position: 0 0;
             animation: pixelatedSpin 0.8s steps(4) infinite;
@@ -140,7 +140,7 @@
         .pixelated-rotate {
             width: 32px;
             height: 32px;
-            background-image: url('images/icons.png');
+            background-image: url('../public/icons/icons.png');
             background-size: 64px 32px; /* Actual size: 64x32 with 2 sprites */
             background-position: 0 0; /* Start with first sprite */
             background-repeat: no-repeat;
@@ -202,17 +202,17 @@
 <body class="min-h-screen overflow-hidden">
     <!-- Background Slideshow -->
     <div class="slideshow-container">
-        <div class="slide active" style="background-image: url('images/truman_clocktower.jpg');"></div>
-        <div class="slide" style="background-image: url('images/truman_fountain.jpg');"></div>
-        <div class="slide" style="background-image: url('images/truman_international_group.jpg');"></div>
-        <div class="slide" style="background-image: url('images/truman_magruder.jpg');"></div>
+        <div class="slide active" style="background-image: url('../public/images/truman_clocktower.jpg');"></div>
+        <div class="slide" style="background-image: url('../public/images/truman_fountain.jpg');"></div>
+        <div class="slide" style="background-image: url('../public/images/truman_international_group.jpg');"></div>
+        <div class="slide" style="background-image: url('../public/images/truman_magruder.jpg');"></div>
     </div>
     
     <!-- Main Content -->
     <div class="content-overlay min-h-screen flex flex-col items-center justify-center text-white relative z-10">
         <!-- Truman Logo -->
         <div class="mb-8">
-            <img src="images/logo.svg" alt="Truman State University" class="truman-logo h-24 w-auto mx-auto">
+            <img src="../public/logo/logo.svg" alt="Truman State University" class="truman-logo h-24 w-auto mx-auto">
         </div>
         
         <!-- Main Title -->
