Implement multi-skybox system with smooth transitions
NEW FEATURES:
- Added multi-skybox support with Truman Campus and Football Field
- Implemented smooth fade transitions between skyboxes
- Added media player-style navigation controls (previous/next buttons)
- Created loading indicators with pixelated animation
- Added skybox counter and current location display

TECHNICAL IMPLEMENTATION:
- Updated SkyboxScene component with transition functionality
- Added fade effects using THREE.js materials
- Implemented proper state management for skybox switching
- Added loading states and transition prevention
- Created responsive navigation controls

UI/UX IMPROVEMENTS:
- Media player-style controls at bottom center
- Previous/Next buttons with hover effects
- Current skybox name and counter display
- Loading overlay with pixelated animation
- Disabled state during transitions

SKYBOX CONFIGURATION:
- Truman Campus (original skybox)
- Football Field (from field-skyboxes 2 folder)
- Easy to add more skyboxes in the future
- Proper image path management

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -24,6 +24,28 @@
 
   <!-- Styles -->
   <link rel="stylesheet" href="style.css">
+  
+  <!-- Additional Styles for Multi-Skybox -->
+  <style>
+    /* Pixelated loading animation */
+    .pixelated-rotate {
+      width: 32px;
+      height: 32px;
+      background-image: url('../public/icons/icons.png');
+      background-size: 64px 32px;
+      background-position: 0 0;
+      background-repeat: no-repeat;
+      animation: pixelatedRotate 1s linear infinite;
+      display: inline-block;
+      margin: 0 auto;
+      image-rendering: pixelated;
+    }
+    
+    @keyframes pixelatedRotate {
+      0% { transform: rotate(0deg); }
+      100% { transform: rotate(360deg); }
+    }
+  </style>
 </head>
 <body class="bg-gray-900 text-white">
   <div id="root" class="h-screen w-full"></div>
