--- a/Frontend/welcome.html
+++ b/Frontend/welcome.html
@@ -230,7 +230,7 @@
         <!-- Subtitle -->
         <div class="text-center mb-12">
             <p class="pixelated-text typewriter">
-                Designed by Computer Science students at Truman State :)
+                Designed by the Computer Science students at Truman State :)
             </p>
         </div>
         
