feat: Add interactive annotation system with smooth camera transitions
- Added 6 clickable annotations positioned at skybox cube edges
- Implemented cinematic camera animations (1.5s duration) when clicking annotations
- Created professional UI panels with return-to-overview functionality
- Added 2D billboard rendering for annotations (always face camera)
- Enhanced user experience with hover effects and visual feedback
- Integrated Monocursive font for professional typography
- Optimized performance with efficient sprite rendering
- Cleaned up unused dialog box functions
- Updated README.md with comprehensive feature documentation
- Version bump to 1.1.0

This major update transforms the static virtual tour into an immersive, interactive experience with smooth camera transitions that guide users through different areas of the Truman campus.

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -36,7 +36,7 @@
       background-position: 0 0;
       background-repeat: no-repeat;
       animation: pixelatedRotate 1s linear infinite;
-      display: inline-block;
+    display: inline-block;
       margin: 0 auto;
       image-rendering: pixelated;
     }
@@ -52,5 +52,18 @@
 
   <!-- Your React App -->
   <script type="text/babel" src="app.js"></script>
+  <!-- Add before closing </body> tag -->
+<div class="loading" id="loading">Loading 3D Environment...</div>
+
+<div class="instructions">
+    <h3>🎯 Find the Annotation</h3>
+    <p><strong>Look around:</strong> Drag to rotate view</p>
+    <p><strong>Hover:</strong> White dot will expand</p>
+    <p><strong>Click:</strong> Reveal the message!</p>
+</div>
+
+<div class="annotation-overlay" id="annotationMessage">
+    You found me! 🎉
+</div>
 </body>
 </html> 
