Major updates: Map dialog, queries integration, UI improvements, and documentation consolidation
Features:
- Map dialog overlay: Bottom-right dialog showing location based on current skybox
- Exact location coordinates: Thousand Hills and Quad with precise GPS coordinates
- Queries integration: Full questionTree.js integration with MongoDB storage
- UI improvements: Visit Truman button, updated button links
- Documentation: Consolidated all docs into README.md

Changes:
- MapView.js: Complete rewrite for dialog-based map display
- UIComponents.js: Updated ViewMapButton and ActionButtons
- queries.html: Full question flow with backend integration
- app.js: Skybox index tracking for map updates
- welcome.html: Redirect to /queries instead of /placeholder
- sessionRoutes.js: Added zipCode and optInForUpdates fields
- README.md: Comprehensive documentation consolidation

Removed:
- All redundant documentation files (10+ .md files)
- placeholder.html.backup

Location Coordinates:
- Thousand Hills: 40.34508954846465, -92.57451304955303
- The Quad: 40.18873778168771, -92.58083505450213

--- a/Frontend/welcome.html
+++ b/Frontend/welcome.html
@@ -315,7 +315,7 @@
             // Redirect after smooth transition
             // Always use backend route (Express server on port 3000)
             setTimeout(() => {
-                window.location.href = '/placeholder';
+                window.location.href = '/queries';
             }, 1500);
         }
         
