--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Truman Virtual Tour - 3D Experience</title>
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
 
   <!-- Tailwind CSS (Note: For production, use PostCSS plugin or Tailwind CLI) -->
   <script src="https://cdn.tailwindcss.com"></script>
