--- a/Frontend/queries.html
+++ b/Frontend/queries.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Truman Virtual Tour - Personalized Experience</title>
-    <link rel="icon" href="data:,">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     
     <!-- Tailwind CSS -->
     <!-- Note: CDN version is fine for development. For production, use PostCSS plugin or Tailwind CLI -->
