--- a/Frontend/welcome.html
+++ b/Frontend/welcome.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Truman Virtual Tour - Welcome</title>
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
