--- a/Frontend/welcome-flow.html
+++ b/Frontend/welcome-flow.html
@@ -60,21 +60,21 @@
     <div id="welcome-flow-root"></div>
 
     <!-- Configuration Files - Load as regular scripts -->
-    <script src="/config/questionTree.js"></script>
-    <script src="/config/facilities.js"></script>
+    <script src="/Frontend/config/questionTree.js"></script>
+    <script src="/Frontend/config/facilities.js"></script>
 
     <!-- API Service -->
-    <script src="/services/api.js"></script>
+    <script src="/Frontend/services/api.js"></script>
 
     <!-- Components -->
-    <script type="text/babel" src="/components/context/FormContext.jsx"></script>
-    <script type="text/babel" src="/components/shared/Button.jsx"></script>
-    <script type="text/babel" src="/components/shared/LoadingSpinner.jsx"></script>
-    <script type="text/babel" src="/components/welcome-flow/ProgressBar.jsx"></script>
-    <script type="text/babel" src="/components/welcome-flow/QuestionStep.jsx"></script>
-    <script type="text/babel" src="/components/welcome-flow/FacilitySelector.jsx"></script>
-    <script type="text/babel" src="/components/welcome-flow/ContactForm.jsx"></script>
-    <script type="text/babel" src="/components/welcome-flow/WelcomeFlow.jsx"></script>
+    <script type="text/babel" src="/Frontend/components/context/FormContext.jsx"></script>
+    <script type="text/babel" src="/Frontend/components/shared/Button.jsx"></script>
+    <script type="text/babel" src="/Frontend/components/shared/LoadingSpinner.jsx"></script>
+    <script type="text/babel" src="/Frontend/components/welcome-flow/ProgressBar.jsx"></script>
+    <script type="text/babel" src="/Frontend/components/welcome-flow/QuestionStep.jsx"></script>
+    <script type="text/babel" src="/Frontend/components/welcome-flow/FacilitySelector.jsx"></script>
+    <script type="text/babel" src="/Frontend/components/welcome-flow/ContactForm.jsx"></script>
+    <script type="text/babel" src="/Frontend/components/welcome-flow/WelcomeFlow.jsx"></script>
 
     <!-- Bootstrap App -->
     <script type="text/babel">
