Fix button responsiveness and pointer events in queries.html - ensure all buttons and cards are clickable

--- a/Frontend/queries.html
+++ b/Frontend/queries.html
@@ -33,6 +33,8 @@
             justify-content: center;
             color: white;
             padding: 2rem;
+            pointer-events: auto;
+            position: relative;
         }
 
         .container {
@@ -47,6 +49,9 @@
             flex-direction: column;
             align-items: stretch;
             justify-content: flex-start;
+            pointer-events: auto;
+            position: relative;
+            z-index: 1;
         }
 
         .step-indicator {
@@ -120,6 +125,10 @@
             flex: 1 1 200px;
             min-width: 200px;
             max-width: 300px;
+            pointer-events: auto;
+            position: relative;
+            z-index: 1;
+            user-select: none;
         }
 
         .option-card:hover {
@@ -247,6 +256,11 @@
             font-weight: 600;
             cursor: pointer;
             transition: all 0.3s ease;
+            pointer-events: auto;
+            position: relative;
+            z-index: 10;
+            user-select: none;
+            -webkit-tap-highlight-color: transparent;
         }
 
         .btn-primary {
@@ -448,7 +462,9 @@
                 html += `
                     <div class="option-card ${isSelected ? 'selected' : ''}" 
                          data-value="${option.value}"
-                         onclick="selectOption('${option.value}', ${stepConfig.id === 'facilities'})">
+                         onclick="selectOption('${option.value}', ${stepConfig.id === 'facilities'}); return false;"
+                         onmousedown="event.preventDefault();"
+                         style="pointer-events: auto; cursor: pointer;">
                         <div class="option-icon">${option.icon || '📌'}</div>
                         <div class="option-label">${option.label}</div>
                         ${option.description ? `<div class="option-description">${option.description}</div>` : ''}
@@ -461,8 +477,9 @@
             if (!isMultiSelect) {
                 html += `
                     <div class="button-group">
-                        <button class="btn btn-primary" onclick="handleContinue(${stepConfig.id === 'user_type' ? 1 : 2})" 
-                                ${!selectedValues ? 'disabled' : ''}>
+                        <button class="btn btn-primary" onclick="handleContinue(${stepConfig.id === 'user_type' ? 1 : 2}); return false;" 
+                                ${!selectedValues ? 'disabled' : ''}
+                                style="pointer-events: auto; cursor: ${!selectedValues ? 'not-allowed' : 'pointer'};">
                             Continue
                         </button>
                     </div>
@@ -471,8 +488,9 @@
                 html += `
                     <div class="selection-count" id="selectionCount"></div>
                     <div class="button-group">
-                        <button class="btn btn-primary" onclick="handleContinue(3)" 
-                                ${!selectedValues || selectedValues.length === 0 ? 'disabled' : ''}>
+                        <button class="btn btn-primary" onclick="handleContinue(3); return false;" 
+                                ${!selectedValues || selectedValues.length === 0 ? 'disabled' : ''}
+                                style="pointer-events: auto; cursor: ${!selectedValues || selectedValues.length === 0 ? 'not-allowed' : 'pointer'};">
                             Continue
                         </button>
                     </div>
@@ -508,7 +526,9 @@
                 html += `
                     <div class="facility-card ${isSelected ? 'selected' : ''}" 
                          data-facility-id="${facility.id}"
-                         onclick="toggleFacility('${facility.id}')">
+                         onclick="toggleFacility('${facility.id}'); return false;"
+                         onmousedown="event.preventDefault();"
+                         style="pointer-events: auto; cursor: pointer;">
                         <img src="${facility.thumbnail}" alt="${facility.name}" 
                              class="facility-thumbnail" 
                              onerror="this.src='/public/images/truman_clocktower.jpg'">
@@ -524,8 +544,9 @@
                     ${selected.length} of 5 selected (minimum 1 required)
                 </div>
                 <div class="button-group">
-                    <button class="btn btn-primary" onclick="handleContinue(3)" 
-                            ${selected.length === 0 ? 'disabled' : ''}>
+                    <button class="btn btn-primary" onclick="handleContinue(3, event); return false;" 
+                            ${selected.length === 0 ? 'disabled' : ''}
+                            style="pointer-events: auto; cursor: ${selected.length === 0 ? 'not-allowed' : 'pointer'};">
                         Continue
                     </button>
                 </div>
@@ -569,8 +590,8 @@
 
             html += `
                     <div class="button-group">
-                        <button type="submit" class="btn btn-primary">Continue to Tour</button>
-                        ${stepConfig.allowSkip ? '<button type="button" class="btn btn-secondary" onclick="handleSkipContact()">Skip</button>' : ''}
+                        <button type="submit" class="btn btn-primary" style="pointer-events: auto; cursor: pointer;">Continue to Tour</button>
+                        ${stepConfig.allowSkip ? '<button type="button" class="btn btn-secondary" onclick="handleSkipContact(); return false;" style="pointer-events: auto; cursor: pointer;">Skip</button>' : ''}
                     </div>
                 </form>
             `;
@@ -678,7 +699,12 @@
         }
 
         // Handle continue button
-        async function handleContinue(stepType) {
+        async function handleContinue(stepType, event) {
+            console.log('handleContinue called:', stepType);
+            if (event) {
+                event.preventDefault();
+                event.stopPropagation();
+            }
             const questionTree = window.questionTree;
             const currentStepConfig = questionTree[appState.currentStep];
 
@@ -776,6 +802,7 @@
 
                 // Redirect to tour (works with both dev server and backend)
                 setTimeout(() => {
+                    console.log('Redirecting to /tour');
                     window.location.href = '/tour';
                 }, 1500);
             } catch (error) {
