--- a/Frontend/queries.html
+++ b/Frontend/queries.html
@@ -189,6 +189,10 @@
             flex: 1 1 200px;
             min-width: 200px;
             max-width: 250px;
+            pointer-events: auto;
+            position: relative;
+            z-index: 1;
+            user-select: none;
         }
 
         .facility-card:hover {
